--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,7 +31,7 @@ error.invalid_type_with_regenerate_prompt=The request does not include a valid t
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
 error.resource_not_found=The request could not be fulfilled because the resource could not be found.
-error.acl.invalid_operation=The provided operation is not supported. Valid values include read and write.
+error.acl.invalid_operation=The provided operation is not supported. Valid values include read, write, delete, read_acl, and write_acl.
 error.acl.missing_aces=At least one access control entry must be provided. Please validate your input and retry your request.
 error.acl.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
 error.acl.not_found=The request could not be fulfilled because the access control entry could not be found.
