--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,6 +36,7 @@ error.acl.missing_aces=At least one access control entry must be provided. Pleas
 error.acl.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
 error.acl.not_found=The request could not be fulfilled because the access control entry could not be found.
 error.acl.lacks_acl_read=The request could not be completed because the ACL does not exist or you do not have sufficient authorization.
+error.acl.lacks_read=The request could not be completed because the credential does not exist or you do not have sufficient authorization.
 error.invalid_interpolation_type=The credential ''{0}'' is not the expected type. A credhub-ref credential must be of type ''JSON''.
 error.invalid_access=The request could not be completed because a reference credential could not be accessed. Please update and retry your request.
 error.auth.invalid_mtls_identity=The provided authentication mechanism does not provide a valid identity. Please contact your system administrator.
