--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,8 +25,8 @@ error.missing_password=A password value must be specified for the credential. Pl
 error.missing_rsa_ssh_parameters=At least one key value must be set. Please validate your input and retry your request.
 error.missing_value=A non-empty value must be specified for the credential. Please validate and retry your request.
 error.cannot_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
-error.invalid_type_with_set_prompt=The request does not include a valid type. Valid values include 'value', 'json', 'password', 'certificate', 'ssh' and 'rsa'.
-error.invalid_type_with_generate_prompt=The request does not include a valid type. Valid values for generate include 'password', 'certificate', 'ssh' and 'rsa'.
+error.invalid_type_with_set_prompt=The request does not include a valid type. Valid values include 'value', 'json', 'password', 'user', 'certificate', 'ssh' and 'rsa'.
+error.invalid_type_with_generate_prompt=The request does not include a valid type. Valid values for generate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_regenerate_prompt=The request does not include a valid type. Valid values for regenerate include 'password', 'certificate', 'ssh' and 'rsa'.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
